syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.bytes.jtim.core.protocol.protobuf";

//默认的返回信息
message DefineResponse {
    bool result = 1;
    int32 ts = 2;
    string message = 3;
}

//ack
message AckRequest {
    string msgId = 1;
}
